--- a/pages/services-details.html
+++ b/pages/services-details.html
@@ -42,8 +42,8 @@
                     <ul class="d-flex justify-content-between nav-ul">
                         <li class="op"><a href="../index.html">services</a></li>
                         <li class="op"><a href="../index.html">testimonials</a></li>
-                        <li class="op"><a href="../index.html">about</a></li>
-                        <li class="op"><a href="../index.html">contact</a></li>
+                        <li class="op"><a href="../pages/about-me.html">about</a></li>
+                        <li class="op"><a href="#contact">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,52 +60,45 @@
         </div>
     </div>
     <!--Services details-->
-    <div class="container">
-        <div class="row ser-row d-flex justify-content-center align-items-center">
-            <div class="col">
-                <div>   
-                    <h2 class="gal-title">Combi Manicure</h2>
-                </div> 
-                <div class="img-resp blog-lg-w">
+    <div class="container mb-3">
+        <div class="row ser-row d-flex justify-content-center align-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="img-banner">
                     <img src="../assets/img/blog-lg.jpg">
                 </div>
             </div>
-        </div>
-        <div class="row ser-row d-flex justify-content-center align-items-center">
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6 d-flex flex-column justify-content-center align-content-center">
                 <h4 class="gal-title">About this service</h4>
                 <p class="gal-p">Velit, praesent pharetra malesuada id pulvinar amet. Consequat potenti mollis massa iaculis et, dolor, eget lectus. Aliquam pellentesque molestie felis fames sed eget non euismod eget. Et eget ullamcorper urna, elit ac diam tellus viverra lacus.
                 Id pulvinar amet. Consequat potenti mollis massa iaculis et, dolor, eget lectus. Aliquam pellentesque molestie felis fames sed eget non euismod eget. Et eget ullamcorper urna, elit ac diam tellus viverra lacus.</p>
             </div>
         </div>
-        <div class="row ser-row d-flex justify-content-center align-items-center">
-            <div class="col">
+        <div class="row ser-row d-flex justify-content-center align-items-center ">
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <div>
                     <h4 class="gal-title">What are the Benifits</h4>
-                    <p class="gal-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur facilisis vivamus massa magna. Blandit mauris libero condimentum commodo morbi consectetur sociis convallis sit. Magna diam amet
-                        justo sed vel dolor et volutpat integer. Adipiscing purus euismod orci sem amet, et. Turpis erat ornare nisi laoreet est euismod.</p>
+                    <p class="gal-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur facilisis vivamus massa magna. Blandit mauris libero condimentum commodo morbi consectetur sociis convallis sit.</p>
                 </div>
                 <ul class="gal-p">
-                    <li>Blandit mauris libero condimentum commodo sociis convallis sit.</li>
-                    <li>Magna diam amet justo sed vel dolor et volutpat integer.</li>
-                    <li>Laculis sit sapien hac odio elementum egestas neque.</li>
-                    <li>Blandit mauris libero condimentum commodo sociis convallis sit.</li>
-                    <li>Magna diam amet justo sed vel dolor et volutpat integer.</li>
-                    <li>Laculis sit sapien hac odio elementum egestas neque.</li>
+                    <li><i class="fa-solid fa-check" style="color: #CF8673;"></i> Blandit mauris libero condimentum commodo sociis convallis sit.</li>
+                    <li><i class="fa-solid fa-check" style="color: #CF8673"></i> Magna diam amet justo sed vel dolor et volutpat integer.</li>
+                    <li><i class="fa-solid fa-check" style="color: #CF8673"></i> Laculis sit sapien hac odio elementum egestas neque.</li>
+                    <li><i class="fa-solid fa-check" style="color: #CF8673"></i> Blandit mauris libero condimentum commodo sociis convallis sit.</li>
+                    <li><i class="fa-solid fa-check" style="color: #CF8673"></i> Magna diam amet justo sed vel dolor et volutpat integer.</li>
+                    <li><i class="fa-solid fa-check" style="color: #CF8673"></i> Laculis sit sapien hac odio elementum egestas neque.</li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <div class="img-resp">
                     <img src="../assets/img/blog-2.jpg">
                 </div>
-                
             </div>
         </div>
     </div>
     <!---Form-->
     <div class="container-fluid">
         <div class="row ser-row d-flex justify-content-center align-items-center bg-form-serv-det" style="min-height: 100vh;">
-            <div class="col-lg-6 col-md-8 col-sm-10">
+            <div class="col-lg-6 col-md-8 col-sm-10 w-for">
                 <div class="text-center mb-4">
                     <h3 class="gal-title">Have any question?</h3>
                 </div>
@@ -173,5 +166,23 @@
             </div>
         </div>
     </footer>
+    <!-----Offcanvas-->
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+        <div class="offcanvas-body">
+            <div class="offcanvas-header navbar-br">
+                <a href="../index.html">BeautyNails</a>
+            </div>
+            <ul class="d-flex flex-column nav-ul text-align-center">
+                <li class="op"><a href="../index.html">services</a></li>
+                <li class="op"><a href="../index.html">testimonials</a></li>
+                <li class="op"><a href="../pages/about-me.html">about</a></li>
+                <li class="op"><a href="#contact">contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-----Fin Offcanvas-->
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
