--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -62,12 +62,12 @@
     <!--Col 1-->
     <div class="container gal-row">
         <div class="row">
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <h3 class="gal-title">More About Us</h3>
                 <p class="gal-p">In commodo auctor eget congue sit. Ultrices eget pretium sit euismod mi id. Risus, aliquam odio posuere ac in in nisl sed augue. Porta aenean egestas malesuada in pulvinar enim viverra.
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut veniam inventore vero incidunt vitae deserunt laboriosam, voluptas ex!.</pc>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <h3 class="gal-title">How Beauty Started</h3>
                 <p class="gal-p">In commodo auctor aenean egestas malesuada in pulvinar enim viverra. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut id delectus laudantium, reprehenderit reiciendis architecto doloribus. Molestiae corporis distinctio accusamus? Eos earum amet nostrum minus atque ea incidunt vero veniam!</p>
             </div>
@@ -76,12 +76,12 @@
     <!--Col 2-->
     <div class="container">
         <div class="row gal-row">
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <div class="img-resp">
                     <img src="../assets/img/abt.jpg">
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <h3 class="gal-title">Most popular, clean, and recommended nail salon</h3>
                 <p class="gal-p">Pretium turpis faucibus adipiscing duis. Id quis tristique mi vitae nec. In et in praesent pellentesque. Porta sit porta ridiculus faucibus. Curabitur lacus pretium pellentesque interdum urna blandit.</p>
                 <p class="gal-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ad voluptas sunt reprehenderit quibusdam similique tempora id, animi pariatur consequuntur. Accusamus officiis cumque placeat officia qui quaerat esse aliquid nihil?</p>
@@ -145,5 +145,23 @@
             </div>
         </div>
     </footer>
+    <!-----Offcanvas-->
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+        <div class="offcanvas-body">
+            <div class="offcanvas-header navbar-br">
+                <a href="../index.html">BeautyNails</a>
+            </div>
+            <ul class="d-flex flex-column nav-ul text-align-center">
+                <li class="op"><a href="../index.html">services</a></li>
+                <li class="op"><a href="../index.html">testimonials</a></li>
+                <li class="op"><a href="../pages/about-me.html">about</a></li>
+                <li class="op"><a href="#contact">contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-----Fin Offcanvas-->
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
