--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -122,5 +122,23 @@
             </div>
         </div>
     </footer>
+    <!-----Offcanvas-->
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+        <div class="offcanvas-body">
+            <div class="offcanvas-header navbar-br">
+                <a href="../index.html">BeautyNails</a>
+            </div>
+            <ul class="d-flex flex-column nav-ul text-align-center">
+                <li class="op"><a href="../index.html">services</a></li>
+                <li class="op"><a href="../index.html">testimonials</a></li>
+                <li class="op"><a href="../pages/about-me.html">about</a></li>
+                <li class="op"><a href="#contact">contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-----Fin Offcanvas-->
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
