--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/about-me.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/quality.css">
+    <link rel="stylesheet" href="./css/pages/services-details.css">
     <link rel="stylesheet" href="./css/testimonials.css">
     <link rel="stylesheet" href="./css/appointment.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -52,7 +53,7 @@
         </div>
     
         <!--------Home------>
-        <div class="container header-flex">
+        <div class="container header-flex mb-3">
             <div class="row">
                 <div class=" col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 d-flex align-items-center">
                     <div class="header-text">
@@ -107,7 +108,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn bt-sub">Submit</button>
                         </div>
                     </div>
                 </div>
@@ -116,7 +117,7 @@
     </header>
     <main>
         <!-----Services---->
-        <div class="container cont-height-2 d-flex align-items-center justify-content-center" id="services">
+        <div class="container cont-height-2 d-flex align-items-center justify-content-center mt-3" id="services">
             <div class="row d-flex align-content-center">
                 <div class="col d-flex justify-content-around flex-column gap-5">
                     <h2 class="services-title">Featured Treatments</h2>
@@ -311,7 +312,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
-                                    <div class="testimonial"> 
+                                    <div> 
                                         <div>
                                             <p class="test-text">“Just had the most relaxing manicure. My nails feel rejuvenated and look gorgeous!”</p>
                                         </div>
