--- a/pages/services-details.html
+++ b/pages/services-details.html
@@ -100,7 +100,7 @@
         <div class="row ser-row d-flex justify-content-center align-items-center bg-form-serv-det" style="min-height: 100vh;">
             <div class="col-lg-6 col-md-8 col-sm-10 w-for">
                 <div class="text-center mb-4">
-                    <h3 class="gal-title">Have any question?</h3>
+                    <h3 class="gal-title col-wi">Have any question?</h3>
                 </div>
                 <form action="https://formspree.io/f/xnnqqbzo" method="POST">
                     <div class="row">
@@ -122,7 +122,7 @@
                         <label for="floatingTextarea2">Comments</label>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                        <button type="submit" class="btn mb-3 bt-sub">Submit</button>
                     </div>
                 </form>
             </div>
