--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col d-flex align-items-center">
                     <div class="header-img">
-                        <img src="/assets/img/header-img.png" alt="header">
+                        <img src="/assets/img/header-img.webp" alt="header">
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                         <div class="cards-flex d-flex flex-column justify-content-between">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
-                                    <img src="/assets/img/section-2-01.png" alt="Combi Manicure">
+                                    <img src="/assets/img/section-2-01.webp" alt="Combi Manicure">
                                 </div>
                                 <div class="cards-text-flex">
                                     <h3>Combi Manicure</h3>
@@ -139,7 +139,7 @@
                         <div class="cards-flex d-flex flex-column justify-content-between">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
-                                    <img src="/assets/img/section-2-02.png" alt="Powegel & Gelpolish">
+                                    <img src="/assets/img/section-2-02.webp" alt="Powegel & Gelpolish">
                                 </div>
                                 <div class="cards-text-flex">
                                     <h3>Powegel & Gelpolish</h3>
@@ -153,7 +153,7 @@
                         <div class="cards-flex d-flex flex-column justify-content-between">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
-                                    <img src="/assets/img/section-2-03.png" alt="Nailart">
+                                    <img src="/assets/img/section-2-03.webp" alt="Nailart">
                                 </div>
                                 <div class="cards-text-flex">
                                     <h3>Nailart</h3>
@@ -167,7 +167,7 @@
                         <div class="cards-flex d-flex flex-column justify-content-between">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
-                                    <img src="/assets/img/section-2-04.png" alt="Toenails">
+                                    <img src="/assets/img/section-2-04.webp" alt="Toenails">
                                 </div>
                                 <div class="cards-text-flex">
                                     <h3>Toenails</h3>
@@ -187,7 +187,7 @@
             <div class="row prod-f">
                 <div class="col">
                     <div class="img-resp">
-                        <img src="assets/img/products.png" alt="Products"> 
+                        <img src="assets/img/products.webp" alt="Products"> 
                     </div>
                 </div>
                 <div class="col">
@@ -204,7 +204,7 @@
                             </div>
                         </a>                  
                         <div class="img-star-prod img-resp">
-                            <img src="./assets/img/btn-products.png" alt="Promo Nail oil & cuticle cream free">
+                            <img src="./assets/img/btn-products.webp" alt="Promo Nail oil & cuticle cream free">
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
             <div class="row about-flex">
                 <div class="col">
                     <div class="img-resp">
-                        <img src="/assets/img/pic-profile.png" alt="Pic Profile">
+                        <img src="/assets/img/pic-profile.webp" alt="Pic Profile">
                     </div>
                 </div>
                 <div class="col">
@@ -251,7 +251,7 @@
             <div class="row cont-height-5">
                 <div class="col-lg-5 d-flex justify-content-center align-items-center">
                     <div class="img-resp">
-                    <img src="./assets/img/quality-img.png" alt="Salon">
+                    <img src="./assets/img/quality-img.webp" alt="Salon">
                     </div>
                 </div>
                 <div class="col-lg-7 d-flex justify-content-center align-items-center">
@@ -265,7 +265,7 @@
                         <div class="qt-bloque-flex">
                             <div class="qt-flex">
                                 <div>
-                                    <img src="./assets/img/icon-1.png" alt="icon-1">
+                                    <img src="./assets/img/icon-1.webp" alt="icon-1">
                                 </div>
                                 <div class="qt-card-text">
                                     <h4>Premium Salon Specialties</h4>
@@ -274,7 +274,7 @@
                             </div>
                             <div class="qt-flex">
                                 <div>
-                                    <img src="./assets/img/icon-2.png" alt="icon-2">
+                                    <img src="./assets/img/icon-2.webp" alt="icon-2">
                                 </div>
                                 <div class="qt-card-text">
                                     <h4>High-Quality Facilities</h4>
@@ -283,7 +283,7 @@
                             </div>
                             <div class="qt-flex">
                                 <div>
-                                    <img src="./assets/img/icon-3.png" alt="icon-3">
+                                    <img src="./assets/img/icon-3.webp" alt="icon-3">
                                 </div>
                                 <div class="qt-card-text">
                                     <h4>Outstanding Ratings & Reviews</h4>
@@ -292,7 +292,7 @@
                             </div>
                             <div class="qt-flex">
                                 <div>
-                                    <img src="./assets/img/icon-4.png" alt="icon-4">
+                                    <img src="./assets/img/icon-4.webp" alt="icon-4">
                                 </div>
                                 <div class="qt-card-text">
                                     <h4>Commitment to Excellence</h4>
@@ -318,7 +318,7 @@
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center align-items-center">
                                             <div>
-                                                <img src="/assets/img/test-icon.png" alt="Client Testimonial">
+                                                <img src="/assets/img/test-icon.webp" alt="Client Testimonial">
                                             </div>
                                             <div>
                                                 <p class="test-client"><b>Laura</b>- 3 days ago</p>
@@ -335,7 +335,7 @@
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center align-items-center">
                                             <div>
-                                                <img src="/assets/img/test-icon-2.png" alt="Client Testimonial">
+                                                <img src="/assets/img/test-icon-2.webp" alt="Client Testimonial">
                                             </div>
                                             <div>
                                                 <p class="test-client"><b>Emily</b>- 5 days ago</p>
@@ -352,7 +352,7 @@
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center align-items-center">
                                             <div>
-                                                <img src="/assets/img/test-icon-3.png" alt="Client Testimonial"> 
+                                                <img src="/assets/img/test-icon-3.webp" alt="Client Testimonial"> 
                                             </div>
                                             <div>
                                                 <p class="test-client"><b>Jessica</b> - 3 days ago</p>
