--- a/pages/services-details.html
+++ b/pages/services-details.html
@@ -64,7 +64,7 @@
         <div class="row ser-row d-flex justify-content-center align-content-center">
             <div class="col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
                 <div class="img-banner">
-                    <img src="../assets/img/blog-lg.jpg">
+                    <img src="../assets/img/blog-lg.webp">
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 d-flex flex-column justify-content-center align-content-center">
@@ -90,7 +90,7 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
                 <div class="img-resp">
-                    <img src="../assets/img/blog-2.jpg">
+                    <img src="../assets/img/blog-2.webp">
                 </div>
             </div>
         </div>
