--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -78,7 +78,7 @@
         <div class="row gal-row">
             <div class="col-sm-12 col-md-12 col-lg-6">
                 <div class="img-resp">
-                    <img src="../assets/img/abt.jpg">
+                    <img src="../assets/img/abt.webp">
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
@@ -94,12 +94,12 @@
         <div class="row mb-5">
             <div class="col d-flex flex-column align-items-center">
                 <div class="gallery">
-                    <img src="../assets/img/gal-post-3.jpg" alt="Imagen 1">
-                    <img src="../assets/img/gal-post-4.jpg" alt="Imagen 2">
-                    <img src="../assets/img/gal-post-6.jpg" alt="Imagen 3">
-                    <img src="../assets/img/gal-post-1.jpg" alt="Imagen 4">
-                    <img src="../assets/img/gal-post-2.jpg" alt="Imagen 5">   
-                    <img src="../assets/img/gal-post-5.jpg" alt="Imagen 6">
+                    <img src="../assets/img/gal-post-3.webp" alt="Imagen 1">
+                    <img src="../assets/img/gal-post-4.webp" alt="Imagen 2">
+                    <img src="../assets/img/gal-post-6.webp" alt="Imagen 3">
+                    <img src="../assets/img/gal-post-1.webp" alt="Imagen 4">
+                    <img src="../assets/img/gal-post-2.webp" alt="Imagen 5">   
+                    <img src="../assets/img/gal-post-5.webp" alt="Imagen 6">
                 </div>
                 <div>
                     <a href="./gallery.html" class="cta-gal d-flex justify-content-center align-items-center">
