--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -60,26 +60,26 @@
         <div class="row">
             <div class="col">
                 <div class="gallery">
-                    <img src="../assets/img/gal-post-3.jpg" alt="Imagen 1">
-                    <img src="../assets/img/gal-post-4.jpg" alt="Imagen 2">
-                    <img src="../assets/img/gal-post-3.jpg" alt="Imagen 1">
-                    <img src="../assets/img/gal-post-4.jpg" alt="Imagen 2">
-                    <img src="../assets/img/gal-post-3.jpg" alt="Imagen 1">
-                    <img src="../assets/img/gal-post-4.jpg" alt="Imagen 2">
+                    <img src="../assets/img/gal-post-3.webp" alt="Imagen 1">
+                    <img src="../assets/img/gal-post-4.webp" alt="Imagen 2">
+                    <img src="../assets/img/gal-post-3.webp" alt="Imagen 1">
+                    <img src="../assets/img/gal-post-4.webp" alt="Imagen 2">
+                    <img src="../assets/img/gal-post-3.webp" alt="Imagen 1">
+                    <img src="../assets/img/gal-post-4.webp" alt="Imagen 2">
 
-                    <img src="../assets/img/gal-post-6.jpg" alt="Imagen 3">
-                    <img src="../assets/img/gal-post-1.jpg" alt="Imagen 4">
-                    <img src="../assets/img/gal-post-6.jpg" alt="Imagen 3">
-                    <img src="../assets/img/gal-post-1.jpg" alt="Imagen 4">
-                    <img src="../assets/img/gal-post-6.jpg" alt="Imagen 3">
-                    <img src="../assets/img/gal-post-1.jpg" alt="Imagen 4">
+                    <img src="../assets/img/gal-post-6.webp" alt="Imagen 3">
+                    <img src="../assets/img/gal-post-1.webp" alt="Imagen 4">
+                    <img src="../assets/img/gal-post-6.webp" alt="Imagen 3">
+                    <img src="../assets/img/gal-post-1.webp" alt="Imagen 4">
+                    <img src="../assets/img/gal-post-6.webp" alt="Imagen 3">
+                    <img src="../assets/img/gal-post-1.webp" alt="Imagen 4">
 
-                    <img src="../assets/img/gal-post-2.jpg" alt="Imagen 5">   
-                    <img src="../assets/img/gal-post-5.jpg" alt="Imagen 6">
-                    <img src="../assets/img/gal-post-2.jpg" alt="Imagen 5">   
-                    <img src="../assets/img/gal-post-5.jpg" alt="Imagen 6">
-                    <img src="../assets/img/gal-post-2.jpg" alt="Imagen 5">   
-                    <img src="../assets/img/gal-post-5.jpg" alt="Imagen 6">
+                    <img src="../assets/img/gal-post-2.webp" alt="Imagen 5">   
+                    <img src="../assets/img/gal-post-5.webp" alt="Imagen 6">
+                    <img src="../assets/img/gal-post-2.webp" alt="Imagen 5">   
+                    <img src="../assets/img/gal-post-5.webp" alt="Imagen 6">
+                    <img src="../assets/img/gal-post-2.webp" alt="Imagen 5">   
+                    <img src="../assets/img/gal-post-5.webp" alt="Imagen 6">
                 </div>
             </div>
         </div>
