--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
         <!-----Nav---->
         <div class="container-fluid sticky-nav">
-            <div class="row he-nav d-flex justify-items-between">
+            <div class="row he-nav d-flex">
                 <div class="col d-flex align-items-center">
                     <div class="navbar-br">
                         <a href="#home">BeautyNails</a>
