[add] translated pages

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <a href="#home">BeautyNails</a>
                     </div>
                 </div>
+                <!---FUN WITH FLAGS-->
                 <div class="flags" id="flags">
                     <div class="flags_item" data-language="es">
                         <img class="flags_item_img" src="./assets/img/es.svg">
@@ -44,6 +45,7 @@
                         <img class="flags_item_img" src="./assets/img/gb.svg">
                     </div>
                 </div>
+                <!------>
                 <div class="col d-flex align-items-center justify-content-end">
                     <div class="menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                         <i class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
@@ -326,7 +328,7 @@
                                                 <img src="/assets/img/test-icon.webp" alt="Client Testimonial">
                                             </div>
                                             <div>
-                                                <p class="test-client" data-section="testimonials" data-value="first-client"><b>Laura</b>- 3 days ago</p>
+                                                <p class="test-client" data-section="testimonials" data-value="first-client"><b>Laura</b> - hace 3 días</p>
                                             </div>
                                         </div>
                                     </div>
@@ -343,7 +345,7 @@
                                                 <img src="/assets/img/test-icon-2.webp" alt="Client Testimonial">
                                             </div>
                                             <div>
-                                                <p class="test-client" data-section="testimonials" data-value="second-client"><b>Emily</b>- 5 days ago</p>
+                                                <p class="test-client" data-section="testimonials" data-value="second-client"><b>Emily</b> - hace 5 días</p>
                                             </div>
                                         </div>
                                     </div>
@@ -360,7 +362,7 @@
                                                 <img src="/assets/img/test-icon-3.webp" alt="Client Testimonial"> 
                                             </div>
                                             <div>
-                                                <p class="test-client" data-section="testimonials" data-value="third-client"><b>Jessica</b> - 3 days ago</p>
+                                                <p class="test-client" data-section="testimonials" data-value="third-client"><b>Jessica</b> - hace 3 días</p>
                                             </div>
                                         </div>
                                     </div>
@@ -417,7 +419,7 @@
                         <li class="light-footer op"><a href="#products" data-section="footer" data-value="products">productos</a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer" data-section="footer" data-value="about" >acerca</li>
+                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
                         <li class="light-footer op"><a href="#testimonials" data-section="footer" data-value="testimonials">testimonios</a></li>
                         <li class="light-footer op"><a href="#about" data-section="footer" data-value="contact">acerca</a></li>
 
