--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -34,16 +34,26 @@
                     <a href="../index.html">BeautyNails</a>
                 </div>
             </div>
+            <!---FUN WITH FLAGS-->
+            <div class="flags" id="flags">
+                <div class="flags_item" data-language="es">
+                    <img class="flags_item_img" src="../assets/img/es.svg">
+                </div>
+                <div class="flags_item" data-language="en">
+                    <img class="flags_item_img" src="../assets/img/gb.svg">
+                </div>
+            </div>
+            <!------>
             <div class="col d-flex align-items-center justify-content-end">
                 <div class="menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                     <i class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="../index.html">services</a></li>
-                        <li class="op"><a href="../index.html">testimonials</a></li>
-                        <li class="op"><a href="../index.html">about</a></li>
-                        <li class="op"><a href="../index.html">contact</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="about">acerca</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="contact">contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +64,7 @@
         <div class="row">
             <div class="col">
                 <div class="appo-text">
-                    <h2>About me</h2>
+                    <h2 data-section="about-me-det" data-value="header-title">Acerca de</h2>
                 </div>
             </div>
         </div>
@@ -63,13 +73,12 @@
     <div class="container gal-row">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <h3 class="gal-title">More About Us</h3>
-                <p class="gal-p">In commodo auctor eget congue sit. Ultrices eget pretium sit euismod mi id. Risus, aliquam odio posuere ac in in nisl sed augue. Porta aenean egestas malesuada in pulvinar enim viverra.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut veniam inventore vero incidunt vitae deserunt laboriosam, voluptas ex!.</pc>
+                <h3 class="gal-title" data-section="about-me-det" data-value="first-title">Sobre Nosotros</h3>
+                <p class="gal-p" data-section="about-me-det" data-value="first-paragraph">En Beauty Nails, cada detalle cuenta. Nos especializamos en realzar la belleza de tus manos con técnicas de uñas modernas y productos de calidad. Creemos que el cuidado de las manos es una forma de expresión, y nuestro equipo está dedicado a brindarte una experiencia única y personalizada en un ambiente de confort. Veni a vivir una experiencia que cuida tanto de ti como de tus uñas</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <h3 class="gal-title">How Beauty Started</h3>
-                <p class="gal-p">In commodo auctor aenean egestas malesuada in pulvinar enim viverra. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut id delectus laudantium, reprehenderit reiciendis architecto doloribus. Molestiae corporis distinctio accusamus? Eos earum amet nostrum minus atque ea incidunt vero veniam!</p>
+                <h3 class="gal-title" data-section="about-me-det" data-value="second-title">Cómo Comenzó Beauty</h3>
+                <p class="gal-p" data-section="about-me-det" data-value="second-paragraph">Beauty Nails comenzó con una visión clara: crear un espacio donde cada persona pueda expresarse a través del arte de las uñas. Desde nuestros primeros diseños, nos comprometimos a ofrecer un servicio que combine creatividad y profesionalismo. Valoramos cada detalle y creemos en un servicio que vaya más allá de lo estético, transformando cada set en una verdadera obra de arte</p>
             </div>
         </div>
     </div>
@@ -82,9 +91,8 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
-                <h3 class="gal-title">Most popular, clean, and recommended nail salon</h3>
-                <p class="gal-p">Pretium turpis faucibus adipiscing duis. Id quis tristique mi vitae nec. In et in praesent pellentesque. Porta sit porta ridiculus faucibus. Curabitur lacus pretium pellentesque interdum urna blandit.</p>
-                <p class="gal-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ad voluptas sunt reprehenderit quibusdam similique tempora id, animi pariatur consequuntur. Accusamus officiis cumque placeat officia qui quaerat esse aliquid nihil?</p>
+                <h3 class="gal-title" data-section="about-me-det" data-value="third-title">El Salón Más Popular, Limpio y Recomendado</h3>
+                <p class="gal-p" data-section="about-me-det" data-value="third-paragraph">Beauty Nails es reconocido por su excelencia en el cuidado de uñas. Nuestro salón ofrece un ambiente limpio y acogedor donde puedes relajarte y disfrutar de servicios de la más alta calidad. Priorizamos la higiene, el confort y las últimas tendencias en el arte de uñas para brindarte una experiencia que supera expectativas. Entra a un espacio donde la belleza y el cuidado se unen para crear el look perfecto.</p>
             </div>
         </div>
     </div>
@@ -103,7 +111,7 @@
                 </div>
                 <div>
                     <a href="./gallery.html" class="cta-gal d-flex justify-content-center align-items-center">
-                        <span>View gallery</span>
+                        <span data-section="about-me-det" data-value="btn-view">Ver galeria</span>
                     </a>
                 </div>
             </div>
@@ -121,15 +129,15 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="../index.html">services</a></li>
-                        <li class="light-footer op"><a href="../index.html">products</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services">servicios</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="products">productos</a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer">about</li>
-                        <li class="light-footer op"><a href="../index.html">testimonials</a></li>
+                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials">testimonios</a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
-                        <li class="bold-footer">contact</li>
+                        <li class="bold-footer" data-section="footer" data-value="contact">contacto</li>
                         <li class="light-footer">1234 Elmwood Avenue</li>
                         <li class="light-footer">info@beautystudio.com</li>
                         <li class="light-footer">90983-05836</li>
@@ -140,7 +148,7 @@
         <div class="row wd-90">
             <div class="col">
                 <div class="rg-fo d-flex justify-content-center align-items-center">
-                    <p>2024 All Rights reserved</p>
+                    <p data-section="footer" data-value="all">2024 Todos los derechos reservados</p>
                 </div>
             </div>
         </div>
@@ -152,14 +160,15 @@
                 <a href="../index.html">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html">services</a></li>
-                <li class="op"><a href="../index.html">testimonials</a></li>
-                <li class="op"><a href="../pages/about-me.html">about</a></li>
-                <li class="op"><a href="#contact">contact</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
+                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
+                <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
             </ul>
         </div>
     </div>
     <!-----Fin Offcanvas-->
+    <script src="../js/scripts.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
