--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -30,16 +30,26 @@
                     <a href="../index.html">BeautyNails</a>
                 </div>
             </div>
+            <!---FUN WITH FLAGS-->
+            <div class="flags" id="flags">
+                <div class="flags_item" data-language="es">
+                    <img class="flags_item_img" src="../assets/img/es.svg">
+                </div>
+                <div class="flags_item" data-language="en">
+                    <img class="flags_item_img" src="../assets/img/gb.svg">
+                </div>
+            </div>
+            <!------>
             <div class="col d-flex align-items-center justify-content-end">
                 <div class="menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                     <i class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="../index.html">services</a></li>
-                        <li class="op"><a href="../index.html">testimonials</a></li>
-                        <li class="op"><a href="../index.html">about</a></li>
-                        <li class="op"><a href="../index.html">contact</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="about">acerca</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="contact">contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,7 +60,7 @@
         <div class="row">
             <div class="col">
                 <div class="appo-text">
-                    <h2>Gallery</h2>
+                    <h2 data-section="header" data-value="title-gallery">Galeria</h2>
                 </div>
             </div>
         </div>
@@ -96,17 +106,17 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="../index.html">services</a></li>
-                        <li class="light-footer op"><a href="../index.html">products</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services">servicios</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="products">productos</a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer">about</li>
-                        <li class="light-footer op"><a href="../index.html">testimonials</a></li>
-                        <li class="light-footer op"><a href="../pages/about-me.html">about</a></li>
+                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials">testimonios</a></li>
+                        <li class="light-footer op"><a href="../pages/about-me.html" data-section="footer" data-value="contact">acerca</a></li>
 
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
-                        <li class="bold-footer">contact</li>
+                        <li class="bold-footer"  data-section="footer" data-value="contact">contacto</li>
                         <li class="light-footer">1234 Elmwood Avenue</li>
                         <li class="light-footer">info@beautystudio.com</li>
                         <li class="light-footer">90983-05836</li>
@@ -117,7 +127,7 @@
         <div class="row wd-90">
             <div class="col">
                 <div class="rg-fo d-flex justify-content-center align-items-center">
-                    <p>2024 All Rights reserved</p>
+                    <p data-section="footer" data-value="all">2024 Todos los derechos reservados</p>
                 </div>
             </div>
         </div>
@@ -129,14 +139,15 @@
                 <a href="../index.html">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html">services</a></li>
-                <li class="op"><a href="../index.html">testimonials</a></li>
-                <li class="op"><a href="../pages/about-me.html">about</a></li>
-                <li class="op"><a href="#contact">contact</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
+                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
+                <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
             </ul>
         </div>
     </div>
     <!-----Fin Offcanvas-->
+    <script src="../js/scripts.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
