--- a/pages/services-details.html
+++ b/pages/services-details.html
@@ -34,16 +34,26 @@
                     <a href="../index.html">BeautyNails</a>
                 </div>
             </div>
+            <!---FUN WITH FLAGS-->
+            <div class="flags" id="flags">
+                <div class="flags_item" data-language="es">
+                    <img class="flags_item_img" src="../assets/img/es.svg">
+                </div>
+                <div class="flags_item" data-language="en">
+                    <img class="flags_item_img" src="../assets/img/gb.svg">
+                </div>
+            </div>
+            <!------>
             <div class="col d-flex align-items-center justify-content-end">
                 <div class="menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                     <i class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="../index.html">services</a></li>
-                        <li class="op"><a href="../index.html">testimonials</a></li>
-                        <li class="op"><a href="../pages/about-me.html">about</a></li>
-                        <li class="op"><a href="#contact">contact</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
+                        <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
+                        <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
+                        <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +64,7 @@
         <div class="row">
             <div class="col">
                 <div class="appo-text">
-                    <h2>Services Details</h2>
+                    <h2 data-section="service-det" data-value="header-title">Detalles del servicio</h2>
                 </div>
             </div>
         </div>
@@ -68,16 +78,16 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 d-flex flex-column justify-content-center align-content-center">
-                <h4 class="gal-title">About this service</h4>
-                <p class="gal-p">Velit, praesent pharetra malesuada id pulvinar amet. Consequat potenti mollis massa iaculis et, dolor, eget lectus. Aliquam pellentesque molestie felis fames sed eget non euismod eget. Et eget ullamcorper urna, elit ac diam tellus viverra lacus.
+                <h4 class="gal-title" data-section="service-det" data-value="first-title">Sobre este servicio</h4>
+                <p class="gal-p" data-section="service-det" data-value="first-paragraph">Velit, praesent pharetra malesuada id pulvinar amet. Consequat potenti mollis massa iaculis et, dolor, eget lectus. Aliquam pellentesque molestie felis fames sed eget non euismod eget. Et eget ullamcorper urna, elit ac diam tellus viverra lacus.
                 Id pulvinar amet. Consequat potenti mollis massa iaculis et, dolor, eget lectus. Aliquam pellentesque molestie felis fames sed eget non euismod eget. Et eget ullamcorper urna, elit ac diam tellus viverra lacus.</p>
             </div>
         </div>
         <div class="row ser-row d-flex justify-content-center align-items-center ">
             <div class="col-sm-12 col-md-12 col-lg-6">
                 <div>
-                    <h4 class="gal-title">What are the Benifits</h4>
-                    <p class="gal-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur facilisis vivamus massa magna. Blandit mauris libero condimentum commodo morbi consectetur sociis convallis sit.</p>
+                    <h4 class="gal-title" data-section="service-det" data-value="second-title">¿Cuáles son los beneficios?</h4>
+                    <p class="gal-p" data-section="service-det" data-value="second-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur facilisis vivamus massa magna. Blandit mauris libero condimentum commodo morbi consectetur sociis convallis sit.</p>
                 </div>
                 <ul class="gal-p">
                     <li><i class="fa-solid fa-check" style="color: #CF8673;"></i> Blandit mauris libero condimentum commodo sociis convallis sit.</li>
@@ -100,29 +110,29 @@
         <div class="row ser-row d-flex justify-content-center align-items-center bg-form-serv-det" style="min-height: 100vh;">
             <div class="col-lg-6 col-md-8 col-sm-10 w-for">
                 <div class="text-center mb-4">
-                    <h3 class="gal-title col-wi">Have any question?</h3>
+                    <h3 class="gal-title col-wi" data-section="service-det" data-value="ques">¿Tenés alguna consulta?</h3>
                 </div>
                 <form action="https://formspree.io/f/xnnqqbzo" method="POST">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-floating mb-3">
                                 <input required type="text" name="Name" class="form-control" id="floatingInput" placeholder="Anna">
-                                <label for="floatingInput">Name</label>
+                                <label for="floatingInput" data-section="form" data-value="name">Nombre</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating mb-3">
                                 <input required type="email" name="Email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                                <label for="floatingInput">Email address</label>
+                                <label for="floatingInput" data-section="form" data-value="email">Correo electrónico</label>
                             </div>
                         </div>
                     </div>
                     <div class="form-floating mb-3">
                         <textarea required name="Message" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                        <label for="floatingTextarea2">Comments</label>
+                        <label for="floatingTextarea2" data-section="form" data-value="comments">Comentarios</label>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn mb-3 bt-sub">Submit</button>
+                        <button type="submit" class="btn mb-3 bt-sub" data-section="form" data-value="btnSubmit">Enviar</button>
                     </div>
                 </form>
             </div>
@@ -140,17 +150,17 @@
                 <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
-                        <li class="light-footer op"><a href="../index.html">services</a></li>
-                        <li class="light-footer op"><a href="../index.html">products</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services">servicios</a></li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="products">productos</a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
-                        <li class="bold-footer">about</li>
-                        <li class="light-footer op"><a href="../index.html">testimonials</a></li>
-                        <li class="light-footer op"><a href="../pages/about-me.html">about</a></li>
+                        <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
+                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="testimonials">testimonios</a></li>
+                        <li class="light-footer op"><a href="../pages/about-me.html" data-section="footer" data-value="about">acerca</a></li>
 
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
-                        <li class="bold-footer">contact</li>
+                        <li class="bold-footer" data-section="footer" data-value="contact">contacto</li>
                         <li class="light-footer">1234 Elmwood Avenue</li>
                         <li class="light-footer">info@beautystudio.com</li>
                         <li class="light-footer">90983-05836</li>
@@ -161,7 +171,7 @@
         <div class="row wd-90">
             <div class="col">
                 <div class="rg-fo d-flex justify-content-center align-items-center">
-                    <p>2024 All Rights reserved</p>
+                    <p data-section="footer" data-value="all">2024 Todos los derechos reservados</p>
                 </div>
             </div>
         </div>
@@ -173,14 +183,15 @@
                 <a href="../index.html">BeautyNails</a>
             </div>
             <ul class="d-flex flex-column nav-ul text-align-center">
-                <li class="op"><a href="../index.html">services</a></li>
-                <li class="op"><a href="../index.html">testimonials</a></li>
-                <li class="op"><a href="../pages/about-me.html">about</a></li>
-                <li class="op"><a href="#contact">contact</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
+                <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
+                <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
             </ul>
         </div>
     </div>
     <!-----Fin Offcanvas-->
+    <script src="../js/scripts.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
