delete services details

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -33,15 +33,15 @@
             <!---FUN WITH FLAGS-->
             <div class="flags" id="flags">
                 <div class="flags_item" data-language="es">
-                    <img class="flags_item_img" src="../assets/img/es.svg">
+                    <img class="flags_item_img" src="../assets/img/es.svg"  alt="flag es">
                 </div>
                 <div class="flags_item" data-language="en">
-                    <img class="flags_item_img" src="../assets/img/gb.svg">
+                    <img class="flags_item_img" src="../assets/img/gb.svg"  alt="flag en">
                 </div>
             </div>
             <!------>
             <div class="col d-flex align-items-center justify-content-end">
-                <div class="menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
+                <div class="menu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                     <i class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
                 </div>
                 <div class="nav-block">
