delete gallery, add products page

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 <div class="col d-flex justify-content-around flex-column gap-5">
                     <h2 class="services-title" data-section="services" data-value="title"></h2>
                     <div class="srv-flex">
-                        <div class="cards-flex d-flex flex-column justify-content-between">
-                            <div class="cards-text d-flex flex-column align-items-center">
+                        <div class="cards-flex d-flex flex-column justify-content-between" data-id="1">
+                            <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
                                     <img src="/assets/img/section-2-01.webp" alt="Combi Manicure">
                                 </div>
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-flex d-flex flex-column justify-content-between" data-id="2">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
                                     <img src="/assets/img/section-2-02.webp" alt="Powegel & Gelpolish">
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-flex d-flex flex-column justify-content-between" data-id="3"> 
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
                                     <img src="/assets/img/section-2-03.webp" alt="Nailart">
@@ -164,7 +164,7 @@
                                 </div>           
                             </div>
                         </div>
-                        <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-flex d-flex flex-column justify-content-between" data-id="4">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
                                     <img src="/assets/img/section-2-04.webp" alt="Toenails">
@@ -194,15 +194,12 @@
                             <p data-section="products" data-value="subtitle"><br>
                                 <span class="bold"><b></b></span></p>
                         </div>
-                        <a href="./pages/gallery.html" class="cta-2 d-flex justify-content-center align-items-center gap-1" role="button">
+                        <a href="./pages/productos.html" class="cta-2 d-flex justify-content-center align-items-center gap-1" role="button">
                             <span data-section="products" data-value="btn"></span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
                         </a>                  
-                        <div class="img-star-prod img-resp">
-                            <img src="./assets/img/btn-products.webp" alt="Promo Nail oil & cuticle cream free">
-                        </div>
                     </div>
                 </div>
             </div>
