--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beauty Nails | Tech-24233</title>
-        <link rel="icon" href="./assets/img/flaticon.png">
+        <link rel="icon" href="../assets/img/flaticon.png">
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!--Google Fonts-->
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="../css/products.css">
         <link rel="stylesheet" href="../css/footer.css">
         <link rel="stylesheet" href="../css/about.css">
-        <link rel="stylesheet" href="../css/pages/gallery.css">
+        <link rel="stylesheet" href="../css/pages/productos.css">
         <link rel="stylesheet" href="../css/pages/about-me.css">
     </head>
 </head>
@@ -109,11 +109,6 @@
                     <img src="../assets/img/gal-post-2.webp" alt="Imagen 5">   
                     <img src="../assets/img/gal-post-5.webp" alt="Imagen 6">
                 </div>
-                <div>
-                    <a href="./gallery.html" class="cta-gal d-flex justify-content-center align-items-center">
-                        <span data-section="about-me-det" data-value="btn-view">Ver galeria</span>
-                    </a>
-                </div>
             </div>
         </div>
     </div>
@@ -130,7 +125,7 @@
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
                         <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="services">servicios</a></li>
-                        <li class="light-footer op"><a href="../index.html" data-section="footer" data-value="products">productos</a></li>
+                        <li class="light-footer op"><a href="../pages/productos.html" data-section="footer" data-value="products">productos</a></li>
                     </ul>
                     <ul class="d-flex gap-3 flex-column">
                         <li class="bold-footer" data-section="footer" data-value="about">acerca</li>
@@ -163,7 +158,7 @@
                 <li class="op"><a href="../index.html" data-section="nav" data-value="services">servicios</a></li>
                 <li class="op"><a href="../index.html" data-section="nav" data-value="testimonials">testimonios</a></li>
                 <li class="op"><a href="../pages/about-me.html" data-section="nav" data-value="about">acerca</a></li>
-                <li class="op"><a href="#contact" data-section="nav" data-value="contact">contacto</a></li>
+                <li class="op"><a href="../index.html" data-section="nav" data-value="contact">contacto</a></li>
             </ul>
         </div>
     </div>
